--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -20,5 +20,6 @@
     <string name="in_the_hexadecimal_system">in the hexadecimal system</string>
     <string name="in_the_decimal_system">in the decimal system</string>
     <string name="Main">Main</string>
-    <string name="delonechar">del</string>
+    <string name="delonechar">backspace</string>
+    <string name="del">Del</string>
 </resources>
