--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -21,4 +21,5 @@
     <string name="in_the_decimal_system">в десятичной системе</string>
     <string name="Main">Главная</string>
     <string name="delonechar">стереть</string>
+    <string name="del">удалить</string>
 </resources>
