--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="Main">Main</string>
     <string name="delonechar">backspace</string>
     <string name="del">Delete</string>
+    <string name="errnumsys">it is not possible to translate this number system</string>
 </resources>
