--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="delonechar">backspace</string>
     <string name="del">Delete</string>
     <string name="errnumsys">it is not possible to translate this number system</string>
+    <string name="CalcNumSys">calculation of number systems</string>
 </resources>
