--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -23,4 +23,5 @@
     <string name="delonechar">backspace</string>
     <string name="del">Del</string>
     <string name="errnumsys">it is not possible to translate this number system</string>
+    <string name="CalcNumSys">calculation of number systems</string>
 </resources>
