--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -24,4 +24,6 @@
     <string name="del">удалить</string>
     <string name="errnumsys">невозможно перевестив данную систему счисления</string>
     <string name="CalcNumSys">расчет систем счисления</string>
+    <string name="VvodCalcNumSys1">Введите первую цифру</string>
+    <string name="VvodCalcNumSys2">Введите вторую цифру</string>
 </resources>
