--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,7 +19,6 @@
     <string name="in_the_octal_system">in the octal system</string>
     <string name="in_the_hexadecimal_system">in the hexadecimal system</string>
     <string name="in_the_decimal_system">in the decimal system</string>
-    <string name="Main">Main</string>
     <string name="delonechar">backspace</string>
     <string name="del">Del</string>
     <string name="errnumsys">it is not possible to translate this number system</string>
@@ -27,5 +26,8 @@
     <string name="VvodCalcNumSys1">Enter the first number</string>
     <string name="VvodCalcNumSys2">Enter the second number</string>
     <string name="action_settings">Settings</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_calc">Calculator</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_numsyscalc">Calculation of number systems</string>
+    <string name="menu_numsysconv">Just conversion</string>
 </resources>
