--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,25 +18,24 @@
     <string name="in_the_octal_system">in the octal system</string>
     <string name="in_the_hexadecimal_system">in the hexadecimal system</string>
     <string name="in_the_decimal_system">in the decimal system</string>
-    <string name="Main">Main</string>
     <string name="delonechar">backspace</string>
     <string name="del">Delete</string>
     <string name="errnumsys">it is not possible to translate this number system</string>
     <string name="CalcNumSys">calculation of number systems</string>
     <string name="VvodCalcNumSys1">Enter the first number</string>
     <string name="VvodCalcNumSys2">Enter the second number</string>
-    <string name="title_activity_main2">Main2Activity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
+    <string name="nav_header_title" translatable="false">Android Studio</string>
+    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_calc">Calculator</string>
+    <string name="menu_slideshow" translatable="false">Slideshow</string>
+    <string name="menu_tools" translatable="false">Tools</string>
     <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_numsyscalc">Calculation of number systems</string>
+    <string name="menu_numsysconv">Just conversion</string>
 </resources>
