--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -30,4 +30,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_numsyscalc">Calculation of number systems</string>
     <string name="menu_numsysconv">Just conversion</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="nav_header_desc" translatable="false">Navigation header</string>
+    <string name="nav_header_subtitle">by Spiridonov prod.</string>
+    <string name="nav_header_title" translatable="false">Useful things</string>
 </resources>
