--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,4 +35,5 @@
     <string name="nav_header_desc" translatable="false">Navigation header</string>
     <string name="nav_header_subtitle">by Spiridonov prod.</string>
     <string name="nav_header_title" translatable="false">Useful things</string>
+    <string name="divonzero">You can\'t div on zero</string>
 </resources>
