--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -35,4 +35,5 @@
     <string name="nav_header_desc" translatable="false">Навигационный заголовок</string>
     <string name="nav_header_title">Полезные вещи</string>
     <string name="nav_header_subtitle">by Spiridonov prod.</string>
+    <string name="divonzero">На ноль делить нельзя, дурачек</string>
 </resources>
