--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,25 @@
     <string name="AboutApp">About</string>
     <string name="Other">Other</string>
     <string name="AboutText">The app was created to help students, as well as anyone who needs such an app. If you like this app, you can always support the developer. Thanks</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="attachment_summary_on">"Automatically download attachments for incoming emails     "</string>
+    <string name="mult_formulas">abbreviated multiplication formulas</string>
+    <string name="Quadratic_equation">Quadratic equation</string>
+    <string name="Trigonometry">Trigonometry</string>
+    <string name="Progressions">Progressions</string>
+    <string name="Triangles">Triangles</string>
+    <string name="Areaofshapes">Area of shapes</string>
 </resources>
