--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -97,4 +97,5 @@
         решение задачи по биологии на генетический код.
 
         Команде разработчиков будет приятно, если Вы поделитесь этим приложением со всеми своими друзьями и оставите отзыв в google play) Спасибо! "</string>
+    <string name="mess_share">Ты уже видел новое приложение для учебы? Скачай сейчас из Google Play! Useful Things</string>
 </resources>
