--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -97,4 +97,5 @@
         solving the task of biology on the genetic code.
 
         The dev team will be pleased if you share this app with all your friends and leave a review on google play) Thanks!"</string>
+    <string name="mess_share">" 40 / 10000 АНГЛИЙСКИЙ Перевести вGoogleBing Have you seen the new study app yet?"</string>
 </resources>
