--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -74,7 +74,7 @@
     <string name="root">root</string>
     <string name="root_square_equa">root of the square equation</string>
     <string name="no_root">no roots</string>
-    <string name="backfeed">backfeed</string>
+    <string name="backfeed">feedback</string>
     <string name="visa_card">Card number: 4274 3200 2700 0226 Sberbank</string>
     <string name="txt_copy">Text Copied</string>
     <string name="press_copy_txt">click to copy the card number</string>
