--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,6 @@
     <string name="root_square_equa">root of the square equation</string>
     <string name="no_root">no roots</string>
     <string name="backfeed">feedback</string>
-    <string name="visa_card">Card number: 4274 3200 2700 0226 Sberbank</string>
     <string name="txt_copy">Text Copied</string>
     <string name="press_copy_txt">click to copy the text</string>
     <string name="txt_backfeed">you can leave a review at the link</string>
@@ -89,7 +88,7 @@
     <string name="bio_task">solving tasks in biology based on the genetic code. You should enter the upper meaning chain 5-3 in the format XXX-XXX-XXX-XXX-XXX, as well as the number of the triplet from the 5 end</string>
     <string name="up_chain">upper chain</string>
     <string name="triplet">triplet</string>
-    <string name="txt_home" translatable="false">You are in the Useful things app. Here you can find a lot of cool and useful sections that will help you in your studies. Currently available:
+    <string name="txt_home">You are in the Useful things app. Here you can find a lot of cool and useful sections that will help you in your studies. Currently available:
 
         mathematical calculator
 
