--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -87,7 +87,7 @@
 
         mathematical calculator
 
-        translation to different number systems.  ((Enter the number first, then the system)
+        translation to different number systems.  (Enter the number first, then the system)
 
         calculator of different number systems. (First enter the numbers, then their number systems, after the operation sign)
 
@@ -96,5 +96,5 @@
         solving the task of biology on the genetic code.
 
         The dev team will be pleased if you share this app with all your friends and leave a review on google play) Thanks!"</string>
-    <string name="mess_share">" 40 / 10000 АНГЛИЙСКИЙ Перевести вGoogleBing Have you seen the new study app yet?"</string>
+    <string name="mess_share">Have you seen the new study app yet?</string>
 </resources>
